<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Maria</string>
    <string name="tags_delimiter">Tag</string>
    <string name="ingredienti_delimiter">Ingredienti</string>
    <string name="preparazione_delimiter">Preparazione</string>
    <string name="titolo_hint">Titolo</string>
    <string name="descrizione_hint">Descrizione</string>
    <string name="maximum_photos_reached">Non puoi aggiungere altre foto!</string>
    <string name="delete_confirmation_text">Vuoi davvero eliminare l\'immagine?</string>
    <string name="delete_confirmation_title">Conferma eliminazione</string>
    <string name="add_photo">Aggiungi foto</string>
    <string name="caloriesHint">Inserisci calorie…</string>
    <string name="peopleHint">Inserisci persone…</string>
    <string name="search_hint">Cerca ricette</string>
    <string name="photo_required">È necessario aggiungere una foto</string>
    <string name="name_required">È necessario aggiungere un titolo</string>
    <string name="desc_required">È necessario aggiungere una descrizione</string>
    <string name="people_required">È necessario indicare il numero di persone</string>
    <string name="ingrediente_required">È necessario indicare almeno un ingrediente</string>
    <string name="passo_required">È necessario indicare almeno un passo</string>
    <string name="gotit">HO CAPITO</string>
    <string name="snack_bar_undo">ANNULLA</string>
    <string name="showcase_button">NASCONDI</string>
    <string name="imagepicker_multiselect_done">Fatto</string>
    <string name="imagepicker_multiselect_not_enough_singular">Devi selezionare un\'altra immagine</string>
    <string name="imagepicker_multiselect_not_enough_plural" tools:ignore="PluralsCandidate">Devi selezionare altre %d immagini</string>
    <string name="imagepicker_multiselect_enough_singular">Hai selezionato 1 immagine</string>
    <string name="imagepicker_multiselect_enough_plural" tools:ignore="PluralsCandidate">Hai selezionato %d immagini</string>
    <string name="imagepicker_multiselect_overselect" tools:ignore="PluralsCandidate">Non puoi selezionare più di %d immagini</string>
    <string name="imagepicker_gallery_intent_title">Selezione multipla immagini</string>
    <string name="imagepicker_no_image_text_view">Non ci sono immagini sul dispositivo.</string>
    <string name="version_text">Versione 1.0</string>
    <string name="export_zip">Esporta le ricette in formato ZIP</string>
    <string name="about_desc">Ci sono poche certezze che ogni italiano può affermare di avere. Il calcetto con gli amici. Gli splendidi paesaggi e il buon vino. I gestacci verso gli sconosciuti alla guida.\nMa la più grande certezza di ognuno di noi è una sola: la pasta al forno della nonna alla domenica. Quest\'app nasce con lo scopo di raccogliere le ricette, mantenerle ordinate, sempre pronte, e consistenti.\nL\'unico compito rimasto all\'utilizzatore è divertirsi in cucina.</string>
    <string name="contact_me">Entriamo in contatto</string>
    <string name="my_email">me@simonemontali.com</string>
    <string name="my_website">http://www.simonemontali.com</string>
    <string name="my_facebook">sim.montali</string>
    <string name="my_twitter">00simmy</string>
    <string name="my_instagram">thenightsimmy</string>
    <string name="export_folder">Export</string>
    <string name="ingredienti">%%INGREDIENTI%%</string>
    <string name="tags">%%TAGS%%</string>
    <string name="passi">%%PASSI%%</string>
    <string name="ricetta_filename">Ricetta.txt</string>
    <string name="export_success">Ricette esportate!</string>
    <string name="export_fail">Non hai ricette da esportare!</string>
    <string name="add">Aggiungi</string>
    <string name="add_ingrediente">Aggiungi ingrediente</string>
    <string name="edit_ingrediente">Modifica ingrediente</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_grams">Grammi</string>
    <string name="ok">OK</string>
    <string name="annulla">ANNULLA</string>
    <string name="elimina">ELIMINA</string>
    <string name="welcome_message">Benvenuto in Maria. \nCrea la tua prima ricetta!</string>
    <string name="passo_add">Aggiungi passo\u0020</string>
    <string name="passo_edit">Modifica passo\u0020</string>
    <string name="passo_desc">Descrizione passo</string>
    <string name="insert_calories">Inserisci calorie</string>
    <string name="calories_abbrv">\u0020cal.</string>
    <string name="people">\u0020persone</string>
    <string name="add_people">Aggiungi persone</string>
    <string name="edit_people">Modifica persone</string>
    <string name="edit_calories">Modifica calorie</string>
    <string name="dunno">Non so</string>
    <string name="fileprovider">com.example.android.fileprovider</string>
    <string name="add_tag">Aggiungi tag</string>
    <string name="edit_tag">Modifica tag</string>
    <string name="tag">Tag</string>
    <string name="about_contact_us">Contattami</string>
    <string name="about_instagram">Seguimi su Instagram</string>
    <string name="about_facebook">Seguimi su Facebook</string>
    <string name="about_youtube">Iscriviti al canale Youtube</string>
    <string name="about_twitter">Seguimi su Twitter</string>
    <string name="about_github">Contribuisci su GitHub</string>
    <string name="about_website">Visita il mio sito</string>
    <string name="import_zip">Importa le ricette da un file ZIP</string>
    <string name="import_success">Importazione completata</string>
    <string name="people_desc">Logo persone</string>
    <string name="weight_desc">Logo peso</string>
    <string name="calorie_desc">Logo calorie</string>
    <string name="recipe_image">Immagine ricetta</string>
    <string name="delete_logo">Delete logo</string>
    <string name="check_logo">Logo spunta</string>
    <string name="info">Informazioni</string>
    <string name="delete">Elimina</string>
</resources>
