<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RicettaViewer"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v4.view.ViewPager
                    android:id="@+id/photo_edit_pager"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="0dp" />

                <ImageButton
                    android:id="@+id/tastoAddPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/add_photo"
                    app:srcCompat="@drawable/ic_plus_solid_white"
                    tools:srcCompat="@color/transparent" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp">
            <EditText
                android:id="@+id/ricetta_titolo_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/people_desc"
                    app:srcCompat="@drawable/ic_user_solid" />

                <TextView
                    android:id="@+id/people_edit_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="0dp"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/weight_desc"
                    app:srcCompat="@drawable/ic_weight_solid" />

                <TextView
                    android:id="@+id/edit_calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="0dp"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />


            </LinearLayout>

            <EditText
                android:id="@+id/ricetta_edit_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/tags_delimiter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:text="@string/tags_delimiter"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvTags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    tools:listitem="@layout/recycler_view_tag" />

            </RelativeLayout>

            <TextView
                android:id="@+id/ingredienti_delimiter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:text="@string/ingredienti_delimiter"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvAnimalsEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    tools:itemCount="3"
                    tools:listitem="@layout/recycler_view_item" />

            </RelativeLayout>

            <TextView
                android:id="@+id/preparazione_delimiter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:text="@string/preparazione_delimiter"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/preparazione_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>