<?xml version="1.0" encoding="utf-8"?>
    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RicettaViewer">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollViewViewer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.v4.view.ViewPager
                android:id="@+id/photo_pager"
        android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="0dp" />
    <TextView
        android:id="@+id/ricetta_titolo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/people_desc"
                    app:srcCompat="@drawable/ic_user_solid" />

                <TextView
                    android:id="@+id/people_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="0dp"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />

                <ImageView
                    android:id="@+id/caloriesLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/calorie_desc"
                    app:srcCompat="@drawable/ic_weight_solid" />

                <TextView
                    android:id="@+id/calorie_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="0dp"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />


            </LinearLayout>

            <TextView
                android:id="@+id/ricetta_view_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:text="@string/tags_delimiter"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvTags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    tools:itemCount="3"
                    tools:listitem="@layout/recycler_view_tag" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:text="@string/ingredienti_delimiter"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvAnimals"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    tools:itemCount="3"
                    tools:listitem="@layout/recycler_view_item" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:text="@string/preparazione_delimiter"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/preparazione"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        app:layout_anchor="@id/scrollViewViewer"
        app:layout_anchorGravity="bottom|right|end"
        app:srcCompat="@drawable/ic_pencil_alt_solid" />

</android.support.design.widget.CoordinatorLayout>